# Keris-RDIN

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml  requirements.txt
configs/: 01_bg_remove.yaml  02_pca_align_baseline.yaml  03_train_yolo.yaml  03b_crop_yolo.yaml  04_augment_train.yaml  05_train_rdin.yaml  06_eval_rdin.yaml
data/: README.md
notebooks/augment/: 01-augment.ipynb
notebooks/preprocess/: 01-rembg-background-removal.py  02-pca-process.ipynb  03a-yolo-train.ipynb  03b-yolo-crop.ipynb  04-features-data.ipynb
notebooks/training/: 01-ori-inceptionresnetv2.ipynb  02-keris-rd-net.ipynb  03-convnext-tiny.ipynb  04-vit-b.ipynb  05-swin-t.ipynb  06-clip-vit-b.ipynb
scripts/: 01_remove_bg.py  02_pca_align_baseline.py  03_train_yolo.py  03b_crop_yolo.py  04_augment_train.py  05_train_rdin.py  06_eval_rdin.py
src/keris/augment/: balanced_aug.py
src/keris/eval/: classifier.py
src/keris/models/: losses.py  rdin.py
src/keris/preprocess/: bg_remove.py  pca_align.py
src/keris/train/: classifier.py
src/keris/utils/: config.py  io.py  seeds.py
src/keris/yolo/: crop.py  train.py
