[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keris-rdin"
version = "0.1.0"
description = "Reproducibility package for Keris preprocessing + Keris-RDIN classifier"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]
